...
import Foundation
import UIKit

/// ``ComicModel`` mocks.
let mockComicModels: [ComicModel] = [
    ComicModel(id: 1,
               title: "test",
               description: "description",
               variantDescription: "test variant",
               thumbnail: MImage(path: "path/to/file", fileType: ".jpg")),
    ComicModel(id: 2,
               title: "test",
               description: "description",
               variantDescription: "test variant",
...
